[package]
name = "dag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
iceoryx2-bb-container = "0.5.0"
iceoryx2-bb-system-types = "0.5.0"
iceoryx2-cal = { version = "0.5.0", features = ["dev_permissions"] }
libc = "0.2.172"
petgraph = { version = "0.7.1", features = ["serde-1"] }
rand = "0.9.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
